--- a/templates/shaper_helixultimate/scss/menu.scss
+++ b/templates/shaper_helixultimate/scss/menu.scss
@@ -240,10 +240,11 @@ body {
 			>li {
 				&.sp-has-child>a:after,
 				&.sp-has-child>span:after{
-					font-family: "FontAwesome";
-					content: "\f107";
+					font-family: "Font Awesome 5 Free";
+					content: "\f0d7";
 					float: right;
 					margin-left: 7px;
+					font-weight: 900;
 				}
 		
 				.sp-menu-badge {		
@@ -260,10 +261,11 @@ body {
 			.sp-dropdown {
 				.sp-dropdown-items{		
 					.sp-has-child>a:after{
-						font-family: "FontAwesome";
-						content: "\f105";
+						font-family: "Font Awesome 5 Free";
+						content: "\f0d7";
 						float: right;
 						margin-left: 7px;
+						font-weight: 900;
 					}
 				}
 		
